Working with opencv2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-project(videostab)
+project(VideoStab)
 
 set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules 
@@ -10,7 +10,8 @@ add_definitions( -std=c++11 -Wall )
 set(CMAKE_BUILD_TYPE Release )
 
 find_package( OPENCV REQUIRED COMPONENTS 
-    core highgui imgcodecs videoio imgproc calib3d video
+    core highgui imgproc calib3d 
+    video
     )
 find_package( TIFF REQUIRED )
 
@@ -22,3 +23,10 @@ target_link_libraries( videostab
     #${GSL_LIBRARIES}
     ${OPENCV_LIBRARIES}
     )
+
+# Install rules
+install( TARGETS videostab 
+    RUNTIME
+    DESTINATION bin
+    )
+
