Not at all cool.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules 
     )
 
+add_subdirectory( ${CMAKE_SOURCE_DIR}/external/TinyTIFF )
+include_directories( ${CMAKE_SOURCE_DIR}/external/TinyTIFF )
+
 add_definitions( -std=c++11 -Wall )
 
 set(CMAKE_BUILD_TYPE Release )
@@ -15,7 +18,6 @@ find_package( OPENCV REQUIRED COMPONENTS
     # This is required for opencv3.
     videoio
     )
-find_package( TIFF REQUIRED )
 
 
 add_executable(videostab src/main.cpp)
@@ -24,6 +26,7 @@ target_link_libraries( videostab
     ${TIFF_LIBRARIES}
     #${GSL_LIBRARIES}
     ${OPENCV_LIBRARIES}
+    tinytiff
     )
 
 # Install rules
