Same result with opencv and libtiff. Need to debug.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,19 +5,20 @@ set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules 
     )
 
-add_subdirectory( ${CMAKE_SOURCE_DIR}/external/TinyTIFF )
-include_directories( ${CMAKE_SOURCE_DIR}/external/TinyTIFF )
+add_subdirectory( ${CMAKE_SOURCE_DIR}/external/TinyTIFF/ )
 
 add_definitions( -std=c++11 -Wall )
 
 set(CMAKE_BUILD_TYPE Release )
 
-find_package( OPENCV REQUIRED COMPONENTS 
-    core highgui imgproc calib3d 
-    video
-    # This is required for opencv3.
-    videoio
+find_package( OPENCV REQUIRED 
+    # COMPONENTS 
+    # core highgui imgproc calib3d 
+    # video
+    # # This is required for opencv3.
+    # videoio
     )
+find_package( TIFF REQUIRED )
 
 
 add_executable(videostab src/main.cpp)
@@ -29,7 +30,6 @@ target_link_libraries( videostab
     tinytiff
     )
 
-# Install rules
 install( TARGETS videostab 
     RUNTIME
     DESTINATION bin
