Ipencv based solution worked.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules 
     )
 
-add_subdirectory( ${CMAKE_SOURCE_DIR}/external/TinyTIFF/ )
+#add_subdirectory( ${CMAKE_SOURCE_DIR}/external/TinyTIFF/ )
 
 add_definitions( -std=c++11 -Wall )
 
@@ -19,6 +19,7 @@ find_package( OPENCV REQUIRED
     # videoio
     )
 find_package( TIFF REQUIRED )
+#add_definitions( -DUSE_LIBTIFF )
 
 
 add_executable(videostab src/main.cpp)
@@ -27,7 +28,7 @@ target_link_libraries( videostab
     ${TIFF_LIBRARIES}
     #${GSL_LIBRARIES}
     ${OPENCV_LIBRARIES}
-    tinytiff
+    #tinytiff
     )
 
 install( TARGETS videostab 
