--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,12 @@ set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules 
     )
 
-#add_subdirectory( ${CMAKE_SOURCE_DIR}/external/TinyTIFF/ )
+# When using TinyTIFF.
+add_subdirectory( ${CMAKE_SOURCE_DIR}/external/TinyTIFF/ )
 include_directories( ${CMAKE_SOURCE_DIR}/external/tclap-1.2.1/include/ )
+add_definitions( -DUSE_TINYTIFF )
+
+include_directories( ${CMAKE_SOURCE_DIR}/external/TinyTIFF )
 
 add_definitions( -std=c++11 -Wall )
 
@@ -19,8 +23,9 @@ find_package( OPENCV REQUIRED
     # # This is required for opencv3.
     # videoio
     )
+# Either use LIBTIFF or TINYTIFF.
 find_package( TIFF REQUIRED )
-#add_definitions( -DUSE_LIBTIFF )
+add_definitions( -DUSE_LIBTIFF )
 
 
 add_executable(videostab src/main.cpp)
@@ -29,7 +34,7 @@ target_link_libraries( videostab
     ${TIFF_LIBRARIES}
     #${GSL_LIBRARIES}
     ${OPENCV_LIBRARIES}
-    #tinytiff
+    tinytiff
     )
 
 install( TARGETS videostab 
