stupidity max. Why it is performing so badly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_definitions( -DUSE_LIBTIFF )
 add_executable(videostab 
     src/main.cpp
     src/videoio.cpp
+    src/globals.cpp
     )
 
 #message( STATUS "Found following libraries ${OpenCV_LIBRARIES}" )
