Build in release mode by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories( ${CMAKE_SOURCE_DIR}/external/easylogging/ )
 
 add_definitions( -std=c++11 -Wall )
 
-set(CMAKE_BUILD_TYPE Debug )
+set(CMAKE_BUILD_TYPE Release )
 
 find_package( OpenCV REQUIRED )
 
